# pyrompt

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: 01_basic_usage.py  02_template_engines.py  03_utilities.py  README.md
misc/: pyrompt_demo.ipynb
misc/dev/: IMPLEMENTATION_PLAN.md  tools_to_use_for_pyrompt.md
pyrompt/: __init__.py  base.py  cli.py  github_integration.py  mall.py  search.py  stores.py  util.py
pyrompt/engines/: __init__.py  format_engine.py  jinja2_engine.py  mustache_engine.py
pyrompt/tests/: __init__.py  conftest.py  test_collections.py  test_engines.py  test_mall.py  test_search.py  test_stores.py
